--- a/style.css
+++ b/style.css
@@ -4,31 +4,34 @@
     font-family: 'Kanit', sans-serif;
     font-family: 'Open Sans', sans-serif;
 }
+/* <!-- The header part is start --> */
+/* <!-- The header part is start --> */
 
 .nav-container{
     display: flex;
     justify-content: space-around;
     align-items: center;
-    padding: 10px 0;
+    padding: 30px 0 15px;
     /* background-color: rgba(11, 2, 35, 0.10); */
-}
-.logo-color{
-    color: #FF42A5;
 }
 .nav-logo{
     font-size: 30px;
     display: flex;
     gap: 10px;
     align-items: center;
-
-}
-.logo-black{
-    color: black;
 }
 .Frame-logo{
     height: 30px;
     width: 60px;
 }
+.text-logo{
+    color: black;
+}
+.logo-color{
+    color: #FF42A5;
+}
+
+
 .nav-itam{
     display: flex;
     font-size: 15px;
@@ -48,11 +51,13 @@ nav li{
     padding: 10px 15px;
     border-radius: 5px;
     font-weight: bolder;
+    align-items: center;
 }
 
-/* <!-- This is header section end --> */
 
-/* <!-- This is main section-1 start --> */
+/* <!-- The header part is End --> */
+/* <!-- The main section-1 is start --> */
+
 
 .main-container{
     /* background-color: rgb(188, 207, 207); */
@@ -72,20 +77,29 @@ nav li{
     font-size: 30px;
 }
 .main-section-head{
-    font-size: 45px;padding: 10px 0;
+    font-weight: bolder;
+    font-size: 45px;
+    padding: 10px 0;
     background-image: linear-gradient(to bottom, #F948B2, #8758F1);
     color: transparent;
     -webkit-background-clip: text;
 }
 .main-link{
     display: flex;
-    font-size: 18px;
+    font-size: 15px;
     list-style: none;
     gap: 7px;
     border-radius: 5px;
     align-items: center;
     padding: 5px 0;
 }
+
+.main-link i{
+    font-size: 15px;
+
+}
+
+
 .containner-btn{
     padding: 20px 0;
 }
@@ -112,9 +126,8 @@ nav li{
 }
 
 
-/* <!-- This is main section-1 end --> */
-
-/* <!-- This is main section-2 start --> */
+/* <!-- The main section-1 is End --> */
+/* <!-- The main section-2 is start --> */
 
 .section-2-container{
     max-width: 1400px;
@@ -162,8 +175,9 @@ nav li{
 }
 
 
-/* <!-- This is main section-2 end --> */
-/* <!-- This is main section-3 start grid --> */
+/* <!-- The main section-2 is End --> */
+/* <!-- The main section-3 is start --> */
+
 
 .section-3-container{
     max-width: 1400px;
@@ -180,6 +194,13 @@ nav li{
     font-size: 35px;
     margin: 10px 0;
 }
+
+.section-3-title-gradient{
+    background-image: linear-gradient(to bottom, #F948B2, #8758F1);
+    color: transparent;
+    -webkit-background-clip: text;
+}
+
 .grid-container{
     display: grid;
     /* border: 1px solid red; */
@@ -200,8 +221,47 @@ nav li{
     font-size: 13px;
 }
 
-/* <!-- This is main section-3 end grid --> */
-/* <!-- This is main section-4 start --> */
+
+.overly-img{
+    position: relative;
+    /* width: 100%; */
+}
+.image-img{
+    display: block;
+    width: 100%;
+}
+.img-overly{
+    position: absolute;
+    top: 0;
+    left: 0;
+    width: 100%;
+    height: 78%;
+    background: rgba(0, 0, 0, 0.6);
+    color: #ffffff;
+    display: flex;flex-direction: column;
+    align-items: center;
+    justify-content: center;
+    opacity: 0;
+    transition: opacity 0.25s;
+    border-radius: 3%;
+}
+.img-title{
+    font-size: 15px;
+    font-weight: bold;
+    padding-top: 12px;
+    color: #F948B2;
+}
+.fa-solid{
+    font-size: 30px;
+}
+.img-overly:hover{
+    opacity: 1;
+}
+
+
+/* <!-- The main section-3 is End --> */
+/* <!-- The main section-4 is start --> */
+
 
 .section-4-container{
     display: flex;
@@ -232,15 +292,12 @@ nav li{
     height: 100%;
 }
 
-
-/* image middle section */
-/* image middle section */
+/* image middle section add start*/
 
 .section-4-right{
     width: 50%;
     /* border: 1px solid red; */
     position: relative;
-
 }
 .discount-img{
     width: 170px;
@@ -253,14 +310,14 @@ nav li{
     bottom: -40px;
     left: -80px;
 }
-/* image middle section */
-/* image middle section */
+/* image middle section add End*/
 
 
-/* <!-- This is main section-5 End --> */
-/* <!-- This is main section-6 start --> */
+/* <!-- The main section-4 is End --> */
+/* <!-- The main section-5 is start --> */
 
-.section-6{
+
+.section-5{
     max-width: 1400px;
     align-items: center;
     /* background-color: rgba(11, 2, 35, 0.10); */
@@ -269,16 +326,14 @@ nav li{
     justify-content: space-around;
     gap: 15px;
 }
-.section-6-container{
+.section-5-container{
     display: grid;
     grid-template-columns: repeat(5, 1fr);
-    list-style: none;
-    
+    list-style: none;  
 }
 .grid-img{
     width: 30px;
     height: 30px;
-    
 }
 .items{
     display: flex;
@@ -301,7 +356,7 @@ nav li{
     justify-content: space-around;
     margin: 50px 0;
 }
-.section-6-title{
+.section-5-title{
     font-size: 15px;font-weight: bold;
 }
 .items:hover{
@@ -310,22 +365,29 @@ nav li{
     border: 1px solid #F948B2;
 }
 
-/* <!-- This is main section-6 end --> */
-/* <!-- This is footer start --> */
+
+/* <!-- The main section-5 is End --> */
+/* <!-- The footer part is start --> */
 
 .footer-container{
     background-color: black;
     max-width: 1400px;
     margin: 40px 0 0 0;
     height: 440px;
-
 }
-.nav-logo{
+
+
+.footer-logo{
+    display: flex;
+    align-items: center;
     justify-content: center;
     color: azure;
-    padding: 80px 0 30px 0;
+    padding: 80px 0 40px;
+    gap: 15px;
 }
-
+.logo{
+    font-size: 30px;
+}
 .footer-itam{
     display: flex;
     list-style: none;
@@ -365,5 +427,3 @@ nav li{
     text-align: center;
     margin-top: 30px;
 }
-
-
